Map footer no longer overlapping content. Product banner is centered and responsive

--- a/source/stylesheets/core.scss
+++ b/source/stylesheets/core.scss
@@ -152,6 +152,7 @@ header {
     height: 469px;
     width: 1400px;
     margin: auto;
+    margin-top: 150px;
     text-align: center;
     @media only screen and (min-width: 64.063em) and (max-width: 90em) { width: auto; } 
     @media only screen and (max-width: 65em){
