--- a/source/stylesheets/products-banner.css
+++ b/source/stylesheets/products-banner.css
@@ -136,6 +136,7 @@ rgba(0, 0, 0, .7) .07em .07em;
 
 .postheader{background: url(images/../pattern.png) repeat-x center top;}
 .full-banner{
-    width: 1400px;
+    width: auto;
+    max-width: 1400px;
     height: 480px;
     background-image: url(../images/pattern.png) ,linear-gradient(45deg,#362d6c 0,#23D7DB 119%) ; }
